# change-of-basis-pruning

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
notebooks/: prune_playground.ipynb
src/: utils.py
src/act_funcy/: tsra.py  utils.py
src/datasets/: datasets.py
src/modeling/: cob.py  pruning.py  utils.py  vgg.py
src/pruning/: rotate.py  standard_pruning.py
src/training/: config.py  train.py  utils.py
training_scripts/: cifar_10-relu_bn.py  cifar_10-tsra_rms.py
