[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cob-pruning"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the current directory (project root)
include = ["src*"] # Find 'src' and any subpackages like 'src.whatever'

[tool.setuptools.package-dir]
"" = "." 